se agregaron 2 párrafos de prueba

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>hola mundo</h1>
+    <p>1 cambio</p>
+    <p>2 cambio</p>
 </body>
 </html>
