--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>1 cambio</p>
     <p>2 cambio sobre el cambio</p>
     <p>ejemplo cambio en la segunda rama</p>
+    <p>ejemplo 2 cambio en la segunda rama</p>
 </body>
 </html>
