3 cambios en h1 de rama segunda

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hola mundo</h1>
-    <p>1 cambio</p>
-    <p>2 cambio sobre el cambio</p>
-    <p>ejemplo cambio en la segunda rama</p>
-    <p>ejemplo 2 cambio en la segunda rama</p>
+    <h1>4 cambio segunda rama</h1>
+    <h1>5 cambio segunda rama</h1>
+    <h1>6 cambio segunda rama</h1>
+  
 </body>
 </html>
